Fix projects spacing

--- a/assets/css/components/_projects.scss
+++ b/assets/css/components/_projects.scss
@@ -26,6 +26,7 @@
                 width: 100%;
                 height: 10em;
                 object-fit: cover;
+                margin-bottom: 0;
             }
 
             &__content {
@@ -34,11 +35,13 @@
                 margin: 0 margin(1) margin(0.5) margin(1);
 
                 &__title {
-                    margin-top: 0;
+                    @include margin-top(0.5);
                     color: $black;
+                    font-weight: 600;
                 }
 
                 &__description {
+                    margin: 0;
                 }
 
                 &__more {
